--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://bloglist.github.io/Best-Essential-Oil-Diffusers-Elevate-Your-Home-s-Ambiance/">https://bloglist.github.io/Best-Essential-Oil-Diffusers-Elevate-Your-Home-s-Ambiance/</a><br>
+                <a target="_bLank" href="https://rockymountainoils.s3.us-east-005.backblazeb2.com/Best+Essential+Oil+Diffusers:+Elevate+Your+Home's+Ambiance/index.html">https://rockymountainoils.s3.us-east-005.backblazeb2.com/Best+Essential+Oil+Diffusers:+Elevate+Your+Home's+Ambiance/index.html</a><br>
+                <a target="_bLank" href="https://best-essential-oil-diffusers-ele-git-b43452-bloglist1s-projects.vercel.app/">https://best-essential-oil-diffusers-ele-git-b43452-bloglist1s-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://imaginative-dodol-adea46.netlify.app/">https://imaginative-dodol-adea46.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
